--- a/includes/footer.html
+++ b/includes/footer.html
@@ -7,17 +7,18 @@
 </head>
 <body>
   <footer class="footer">
-    <div class="footer-main">
-      <div class="footer-map">
-        <img src="../img/maps.png" alt="Ubicación de la panadería en el mapa">
-      </div>
+    <div class="footer-map">
+      <img src="../img/maps.png" alt="Ubicación de la panadería en el mapa">
+    </div>
 
-      <div class="footer-contact">
-        <p>correo: <a href="mailto:panaderiadoblej@gmail.com">panaderiadoblej@gmail.com</a></p>
-        <p>teléfono: 644568599</p>
-        <p>dirección: Plaza los jardines celestiales</p>
-        <p>139 Calle al paraíso &nbsp; 04617</p>
-      </div>
+    <div class="footer-contact">
+      <p><strong>Panadería Doble J</strong></p>
+      <p>Correo: <a href="mailto:panaderiadoblej@gmail.com">panaderiadoblej@gmail.com</a></p>
+      <p>Teléfono: 644 568 599</p>
+      <p>Dirección: Plaza los jardines celestiales</p>
+      <p>139 Calle al paraíso &nbsp; 04617</p>
+      <p>Horario: Lunes a sábado, 7:00&nbsp;–&nbsp;14:00</p>
+      <p>Síguenos en: Facebook · Instagram · Twitter</p>
     </div>
   </footer>
 </body>
