--- a/includes/header.html
+++ b/includes/header.html
@@ -11,15 +11,15 @@
 
       <a class="brand" href="../index.html" target="_top">
         <img src="../img/logo.jpg" alt="Logo Panadería Doble J" class="brand__icon">
-        <span class="brand__title">panaderia doble j</span>
+        <span class="brand__title">Panaderia Doble J</span>
       </a>
       
       <nav class="main-nav" aria-label="Menú principal">
         <a href="../panes.html" target="_top">PANES</a>
         <a href="../postres.html" target="_top">POSTRES</a>
         <a href="../cafes.html" target="_top">CAFÉS</a>
+        <a href="../index.html" target="_top">CONTACTO</a>
       </nav>
-
     </div>
   </header>
 </body>
