--- a/includes/header.html
+++ b/includes/header.html
@@ -18,7 +18,7 @@
         <a href="../panes.html" target="_top">PANES</a>
         <a href="../postres.html" target="_top">POSTRES</a>
         <a href="../cafes.html" target="_top">CAFÉS</a>
-        <a href="../index.html" target="_top">CONTACTO</a>
+        <a href="../contacto.html" target="_top">CONTACTO</a>
       </nav>
     </div>
   </header>
